<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">
    <TextView
            android:text="@string/Label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textView"
            tools:text="Chương trình máy tính bỏ túi khá là củ chuối"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/Number1" android:minHeight="48dp" tools:ignore="SpeakableTextPresentCheck"
            android:translationY="20dp" android:hint="@string/Number1" android:autofillHints=""/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/Number2" android:minHeight="48dp" android:translationY="40dp"
            android:hint="@string/Number2" android:autofillHints=""/>
    <TextView
            android:text="@string/Result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/Result" android:translationY="60dp"
            tools:text="Kết quả"/>
    <Button
            android:text="@string/cong"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/btncong" tools:ignore="DuplicateSpeakableTextCheck"
            android:translationY="80dp" tools:text="cộng"/>
    <Button
            android:text="@string/tru"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/btntru" android:translationY="100dp"
            tools:text="trừ"/>
    <Button
            android:text="@string/nhan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/btnnhan" android:translationY="120dp"
            tools:text="nhân"/>
    <Button
            android:text="@string/chia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/btnchia" android:translationY="140dp"
            tools:text="chia"/>
</LinearLayout>